# SolarIrradianceAnalysis

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  LICENSE  Makefile  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
backup/: original_colab_code.py
docs/: ADDING_DATASETS.md
scripts/: setup-dev.ps1  setup-dev.sh
src/: __init__.py
src/analysis/: __init__.py  analysis_functions.py
src/core/: config.py
src/data/: __init__.py  data_sets.py
src/export/: __init__.py  document_exporter.py
src/utils/: i18n.py
src/visualization/: __init__.py  plotting_functions.py
